chore(deps): update all non-major dependencies (#244)
* chore(deps): update all non-major dependencies

* fix: Replace deprecated api

* feat: Add SBOM support

* refactor: Use OpenRewrite for migration to Spring Boot 3.3

* refactor: Remove static imports (Mockito, WireMock)

* refactor: Remove static imports (Selenide, Testcontainers)

* refactor: Remove static imports (HttpStatus, Assertions)

* refactor: Remove static imports

* chore: Update badges

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <brano.beno@gmail.com>